# voicebox

./: .gitignore  OBJECTIVE.MD  pyproject.toml  requirements-colab.txt
notebooks/: colab_runner.ipynb
scripts/: build_dataset.py  check_env.py  curate_facts.py  eval.py  extract_vectors.py  pretrain_voicebox.py  subsample_facts.py  train.py
src/voicebox/: __init__.py  config.py  data.py  macro.py  projector.py  train.py  voicebox.py
